--- a/.env
+++ b/.env
@@ -25,8 +25,8 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=acai_life
 DB_USERNAME=root
-DB_PASSWORD=Jhonnatas.56
-# DB_PASSWORD=123456789
+#DB_PASSWORD=Jhonnatas.56
+DB_PASSWORD=123456789
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
